# Robotic_Manipulation_Task

./: LICENSE  README.md  twoTables_ver6.ttt  twoTables_ver7.ttt
Jam/: JacoStoreScenario.jam
catkin_ws/: converter.launch  readme.txt  run.sh
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
catkin_ws/devel/include/diagnostic_msgs/: AddDiagnosticsRequest.h  AddDiagnosticsResponse.h  DiagnosticArray.h  DiagnosticStatus.h  KeyValue.h  SelfTestRequest.h  SelfTestResponse.h
catkin_ws/devel/include/driver_base/: ConfigString.h  ConfigValue.h  SensorLevels.h
catkin_ws/devel/include/geometry_msgs/: Accel.h  Inertia.h  (+27 more)
catkin_ws/src/context_manager_pkg/: package.xml  settings.gradle
catkin_ws/src/kinovaasrc/moveit_vrep_interface/: CMakeLists.txt  package.xml
catkin_ws/src/kinovaasrc/moveit_vrep_interface/include/: moveitcontroller.h
catkin_ws/src/kinovaasrc/moveit_vrep_interface/src/: main.cpp  moveitcontroller.cpp
catkin_ws/src/moveit_msgs/: CMakeLists.txt
catkin_ws/src/rosjava_custom_srv/: CMakeLists.txt
catkin_ws/src/rosjava_srv_ws/: .project  build.gradle
cmProlog/agent/owl/: catalog-v001.xml  object_demo_tables.owl
cmProlog/agent/prolog/: arbi_comp_spatial.pl  arbi_convenient_service.pl  predicate.pl  predicate_.pl  predicate__global_variable.pl
cmProlog/knowrob_library/: catalog-v001.xml  comp_spatial.pl  knowrob.owl
cmProlog/prolog/: init.pl
context_manager_pkg/: CMakeLists.txt  build.gradle
context_manager_pkg/context_manager/: build.gradle
(+1093 files in other folders)
